cabal-version:       3.0
name:                linux-io-uring
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
category:            System
build-type:          Simple
extra-source-files:  include/hs_uring.h
                     include/syscall.h

library
  exposed-modules:     System.Linux.IO.URing
                       System.Linux.IO.URing.Cqe
                       System.Linux.IO.URing.PollEvent
                       System.Linux.IO.URing.IoVec
                       System.Linux.IO.URing.Ring
                       System.Linux.IO.URing.Sqe
                       System.Linux.IO.URing.Barrier
                       System.Linux.IO.URing.PVar
  hs-source-dirs:      src
  c-sources:           cbits/hs_uring.c
                       cbits/syscall.c
  cmm-sources:         cbits/barriers.cmm
  include-dirs:        include
  ghc-options:         -Wall -ddump-to-file -ddump-simpl -dsuppress-ticks -dsuppress-idinfo
  build-depends:       base >=4.12 && <4.16
  other-extensions:    RecordWildCards, DataKinds
  default-language:    Haskell2010

executable io-uring
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.16,
                       bytestring,
                       unix,
                       linux-io-uring
  ghc-options:         -rtsopts -with-rtsopts=-V0
  default-language:    Haskell2010
